post main skeleton animation

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -166,30 +166,38 @@
 <div class="post-wrap" id="post-wrap">
     <div class="postmain-skel">
         <div class="pmsk-section1">
-            <div class="pmsk-cover"></div>
+            <div class="pmsk-cover pmsk-item"></div>
             <div class="pmsk-postinfo">
                 <div class="pmsk-header">
-                    <span class="pmsk-title"></span>
-                    <i class="pmsk-menu"></i>
+                    <span class="pmsk-title pmsk-item"></span>
+                    <i class="bi bi-three-dots pmsk-menu pmsk-item"></i>
                 </div>
-                <div class="pmsk-desc"></div>
+                <div class="pmsk-body">
+                    <div class="pmsk-covermobile pmsk-item"></div>
+                    <div class="pmsk-desc">
+                        <span class="pmsk-item"></span>
+                        <span class="pmsk-item"></span>
+                        <span class="pmsk-item"></span>
+                        <span class="pmsk-item"></span>
+                    </div>
+                </div>
                 <div class="pmsk-footer">
-                    <span class="pmsk-evaluation"></span>
-                    <span class="pmsk-uname"></span>
-                    <i class="pmsk-uimg"></i>
+                    <span class="pmsk-evaluation pmsk-item"></span>
+                    <span class="pmsk-uname pmsk-item"></span>
+                    <i class="bi bi-person-fill pmsk-uimg pmsk-item"></i>
                 </div>
                 <div class="pmsk-primary">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span class="pmsk-item"></span>
+                    <span class="pmsk-item"></span>
+                    <span class="pmsk-item"></span>
+                    <span class="pmsk-item"></span>
                 </div>
                 <div class="pmsk-tags">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span class="pmsk-item"></span>
+                    <span class="pmsk-item"></span>
+                    <span class="pmsk-item"></span>
+                    <span class="pmsk-item"></span>
+                    <span class="pmsk-item"></span>
                 </div>
                 <div class="pmsk-stats">
                     <div class="pmsk-statcont">
@@ -212,16 +220,16 @@
             </div>
         </div>
         <div class="pmsk-section2">
-            <div class="pmsk-section2header">
-                <div class="pmsk-readbtn"></div>
-                <div class="pmsk-chaptersbtn"></div>
+            <div class="pmsk-readbtns">
+                <div class="pmsk-readbtn pmsk-item"></div>
+                <div class="pmsk-chaptersbtn pmsk-item"></div>
             </div>
             <div class="pmsk-rating">
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
+                <i class="bi bi-star pmsk-item"></i>
+                <i class="bi bi-star pmsk-item"></i>
+                <i class="bi bi-star pmsk-item"></i>
+                <i class="bi bi-star pmsk-item"></i>
+                <i class="bi bi-star pmsk-item"></i>
             </div>
         </div>
     </div>
