--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -63,6 +63,15 @@ select {
     opacity: 0 !important;
 }
 
+@keyframes loading-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 //Background clickable shadows
 .modalbg1 {
