--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -58,6 +58,8 @@
     --commentskeleton-itemcolor-end: #686868;
     --profileskeleton-itemcolor-start: #434343;
     --profileskeleton-itemcolor-end: #686868;
+    --postmainskeleton-itemcolor-start: #434343;
+    --postmainskeleton-itemcolor-end: #686868;
 
 
 
@@ -129,6 +131,8 @@
     --commentskeleton-itemcolor-end: #b9cdec;
     --profileskeleton-itemcolor-start: #d1d5db;
     --profileskeleton-itemcolor-end: #b9cdec;
+    --postmainskeleton-itemcolor-start: #d1d5db;
+    --postmainskeleton-itemcolor-end: #b9cdec;
 
 
 
