--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -44,6 +44,8 @@
   --commentskeleton-itemcolor-end: #686868;
   --profileskeleton-itemcolor-start: #434343;
   --profileskeleton-itemcolor-end: #686868;
+  --postmainskeleton-itemcolor-start: #434343;
+  --postmainskeleton-itemcolor-end: #686868;
   --button-red: #963a3a;
   --button-red-hover: #a34a4a;
   --button-blue: #3d779e;
@@ -98,6 +100,8 @@
   --commentskeleton-itemcolor-end: #b9cdec;
   --profileskeleton-itemcolor-start: #d1d5db;
   --profileskeleton-itemcolor-end: #b9cdec;
+  --postmainskeleton-itemcolor-start: #d1d5db;
+  --postmainskeleton-itemcolor-end: #b9cdec;
   --button-red: #c76363;
   --button-red-hover: #e05050;
   --button-blue: #63a3cf;
