--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -91,6 +91,7 @@ main{
         .postlist{
             width: 100%;
             .post{
+                margin-bottom: 12px;
                 background-color: var(--index-post-bg-color);
             }
         }
