--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -100,9 +100,13 @@ main {
         align-items: flex-start;
         justify-content: space-between;
         flex-direction: column;
+        gap: 12px 0;
 
         #pl-column1, #pl-column2{
+            display: flex;
+            flex-direction: column;
             width: 100%;
+            gap: 12px 0;
             .post{
                 background-color: var(--background-color2);
                 .p-info{
